Changes in views and services information

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -39,7 +39,7 @@
             </ion-item>
           </div>
           <div padding>
-            <ion-button type="submit" [disabled]="form.invalid" expand="block">
+            <ion-button type="submit"  expand="block">
               Ingresar
             </ion-button>
           </div>
