--- a/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.scss
+++ b/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.scss
@@ -1,5 +1,4 @@
-@import "~swiper/css";
-@import "~swiper/css/pagination";
+
 .swiper {
   width: 100%;
   height: 30vh;
@@ -8,15 +7,15 @@
 }
 
 .swiper-slide {
+  all:unset;
   text-align: center;
-  font-size: 12px;
  
 
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex;
+  
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
@@ -24,7 +23,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  align-items: center;
+  align-items: stretch;
 }
 
 .swiper-slide img {
