--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -49,5 +49,5 @@
   
 </ion-content>
 <ion-footer>
-  <ion-button expand="block" shape="round" >Comprar</ion-button>
+  <ion-button expand="block" shape="round" (click)="sendMessage(product.profileId)" >Comprar</ion-button>
 </ion-footer>
