--- a/src/app/markteplace/components/category-list/category-list.component.scss
+++ b/src/app/markteplace/components/category-list/category-list.component.scss
@@ -1,5 +1,4 @@
-@import "~swiper/css";
-@import "~swiper/css/pagination";
+
 .swiper {
   width: 100%;
   height: 20vh;
@@ -24,7 +23,8 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  align-items: center;
+  align-items: stretch;
+  padding:  0.5rem 0;
 }
 
 .swiper-slide img {
