--- a/src/app/markteplace/components/product-card-hrz/product-card-hrz.component.scss
+++ b/src/app/markteplace/components/product-card-hrz/product-card-hrz.component.scss
@@ -27,6 +27,9 @@
 
     &--data {
       padding: 0 0.5rem;
+      p{
+        margin: 0;
+      }
 
       &--name {
         font-weight: bold;
@@ -42,7 +45,7 @@
         justify-content: space-between;
 
         &--heart {
-          font-size: 2rem;
+          font-size: 2.5rem;
           color: var(--ion-color-favorite);
         }
 
