--- a/src/app/markteplace/components/product-card/product-card.component.scss
+++ b/src/app/markteplace/components/product-card/product-card.component.scss
@@ -32,6 +32,7 @@ ion-card-header {
   background-color: hsl(204, 8%, 98%);
   margin: 0.3em;
   height: 100%;
+  max-height: 100%;
   border-radius: 0.5em;
   display: grid;
   grid-template-rows: 2fr 0.5fr 0.5fr;
@@ -42,10 +43,17 @@ ion-card-header {
 
   &__image {
     width: 100%;
-    height: 20vh;
-    object-fit: cover;
-    object-position: center center;
-    border-radius: 0.6em;
+    height: 100%;
+    position: relative;
+    &--image {
+      position: absolute;
+      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+      object-position: center center;
+      border-radius: 0.6em;
+    }
   }
 
   &__header {
