--- a/src/global.scss
+++ b/src/global.scss
@@ -26,5 +26,6 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-
+@import "~swiper/css";
+@import "~swiper/css/pagination";
 
