--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -24,7 +24,7 @@
         <p><ion-icon name="pricetags"></ion-icon> {{profile.sales}}</p>
       </div>
       <div class="profile__info--box">
-        <p><ion-icon name="albums"></ion-icon> {{profile.products}}</p>
+        <p><ion-icon name="albums"></ion-icon> {{products.length}}</p>
       </div>
     </div>
 
