--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -7,83 +7,103 @@
     <div class="ion-text-center">
       <h2>Registrar</h2>
     </div>
-    <ion-row>
-      <ion-col size="12">
-        <ion-item>
-          <ion-label position="floating">Producto</ion-label>
-          <ion-input></ion-input>
-        </ion-item>
-      </ion-col>
-      <ion-col size="12">
-        <ion-item>
-          <ion-label position="floating">Descripción</ion-label>
-          <ion-textarea></ion-textarea>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      
-      <ion-col size="12">
-        <ion-item>
-          <ion-label position="floating">Precio </ion-label>
-          <ion-input type="number"></ion-input>
-        </ion-item>
-      </ion-col>
-     
-    </ion-row>
+    <form #frm="ngForm" (ngSubmit)="onSubmit()">
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Producto</ion-label>
+            <ion-input
+              name="name"
+              type="text"
+              [(ngModel)]="product.name"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Descripción</ion-label>
+            <ion-textarea
+              name="description"
+              type="text"
+              [(ngModel)]="product.description"
+              required
+            ></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Precio </ion-label>
+            <ion-input
+              type="number"
+              step="any"
+              name="price"
+              [(ngModel)]="product.price"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
-  <ion-row>
-    <ion-col size="12">
-    <ion-item lines="none">
-      <ion-label position="stacked">Categorias</ion-label>
-      <ion-select multiple="true" [value]="categories" placeholder="Seleccione una categoria">
-        <ion-select-option value="electrónicos">Electrónicos</ion-select-option>
-        <ion-select-option value="servicios">Servicios</ion-select-option>
-        <ion-select-option value="celulares">Celulares</ion-select-option>
-        <ion-select-option value="repuestos">Repuestos</ion-select-option>
-      </ion-select>
-    </ion-item>
-    </ion-col>
-    <ion-col size="12">
-      <div *ngFor="let category of categories">
-        <ion-badge color="medium">{{category}}</ion-badge>
-      </div>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col size="12">
-      <ion-item>
-        <ion-label position="stacked">Estado</ion-label>
-        <ion-select placeholder="Seleccione un estado">
-          <ion-select-option value="new">Nuevo</ion-select-option>
-          <ion-select-option value="use">Usado</ion-select-option>
-          <ion-select-option value="box">En caja</ion-select-option>
-
-        </ion-select>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col size="12">
-      <ion-item>
-        <ion-label position="stacked">Estado</ion-label>
-        <ion-select placeholder="Seleccione un tipo">
-          <ion-select-option value="product">Producto</ion-select-option>
-          <ion-select-option value="service">Servicio</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col size="12">
-      <ion-item>
-        <ion-label position="stacked">Imagen </ion-label>
-        <ion-input type="file"></ion-input>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-  <ion-button expand="full">Guardar</ion-button>
-            
-
+      <ion-row>
+        <ion-col size="12">
+          <ion-item lines="none">
+            <ion-label position="stacked">Categorias</ion-label>
+            <ion-select
+              multiple="true"
+              (ionChange)="handleChange($event)"
+              placeholder="Seleccione una categoria"
+            >
+              <ion-select-option
+                *ngFor="let category of categories"
+                [value]="category"
+                >{{category.name}}</ion-select-option
+              >
+            </ion-select>
+          </ion-item>
+        </ion-col>
+        <ion-col size="12">
+          <span *ngFor="let category of product.categories">
+            <ion-badge color="medium">{{category.name}}</ion-badge>
+          </span>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="stacked">Estado</ion-label>
+            <ion-select placeholder="Seleccione un estado">
+              <ion-select-option value="new">Nuevo</ion-select-option>
+              <ion-select-option value="use">Usado</ion-select-option>
+              <ion-select-option value="box">En caja</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="stacked">Estado</ion-label>
+            <ion-select placeholder="Seleccione un tipo">
+              <ion-select-option value="product">Producto</ion-select-option>
+              <ion-select-option value="service">Servicio</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="stacked">Imagen </ion-label>
+            <ion-input type="file"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-button expand="full" type="submit" [disabled]="frm.invalid"
+        >Guardar</ion-button
+      >
+    </form>
   </ion-grid>
 </ion-content>
