--- a/src/app/modals/quote-response/quote-response.page.html
+++ b/src/app/modals/quote-response/quote-response.page.html
@@ -7,10 +7,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
   <div *ngIf="responses.length <1">
     <h2>No tienes ofertas.</h2>
-    
   </div>
-  <app-response-quote-list [responseQuotes]="responses"></app-response-quote-list>
+  <app-response-quote-list
+    [responseQuotes]="responses"
+  ></app-response-quote-list>
 </ion-content>
+<ion-footer>
+  <ion-button expand="block" shape="round" (click)="sendOffer()"
+    >Enviar Oferta</ion-button
+  >
+</ion-footer>
