Changed Page of Reponses

--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -33,10 +33,10 @@
       <ion-icon name="flag" slot="start"></ion-icon>
       <ion-label>Emprende</ion-label>
     </ion-item>
-    <ion-item>
+    <!-- <ion-item>
       <ion-icon name="briefcase" slot="start"></ion-icon>
       <ion-label>Empleos</ion-label>
-    </ion-item>
+    </ion-item> -->
     <!-- <ion-item (click)="viewRedirect('/app/tabs/coupons')">
       <ion-icon name="pricetags" slot="start"></ion-icon>
       <ion-label>Cupones</ion-label>
@@ -57,21 +57,21 @@
       <ion-icon name="chatbubbles" slot="start"></ion-icon>
       <ion-label>Chats</ion-label>
     </ion-item>
-    <ion-item (click)="viewRedirect('/wallet')">
+    <!-- <ion-item (click)="viewRedirect('/wallet')">
       <ion-icon name="wallet" slot="start"></ion-icon>
       <ion-label>Mi Billetera</ion-label>
     </ion-item>
     <ion-item>
       <ion-icon name="eye" slot="start"></ion-icon>
       <ion-label>Opciones de privacidad</ion-label>
-    </ion-item>
+    </ion-item> -->
     <ion-item-divider>
       <ion-label> Ayuda </ion-label>
     </ion-item-divider>
-    <ion-item>
+    <!-- <ion-item>
       <ion-icon name="help-circle" slot="start"></ion-icon>
       <ion-label>Ayuda</ion-label>
-    </ion-item>
+    </ion-item> -->
     <ion-item>
       <ion-icon name="information-circle" slot="start"></ion-icon>
       <ion-label>Políticas, Términos y Condiciones</ion-label>
