--- a/src/app/markteplace/components/response-quote/response-quote.component.html
+++ b/src/app/markteplace/components/response-quote/response-quote.component.html
@@ -1,20 +1,20 @@
-<ion-card>    
-  <ion-row >
+<ion-card>
+  <ion-row>
     <ion-col size="8">
       <ion-item lines="none">
         <ion-avatar slot="start">
-          <img src="{{profile.photo}}" />
+          <img src="{{ profile.photo }}" />
         </ion-avatar>
         <ion-label>
-          <h2> {{profile.name}}</h2>
-          <h3> {{resp.comment}}</h3>
-          <p>{{resp.createdAt}}</p>
+          <h2>{{ profile.name }}</h2>
+          <h3>{{ resp.comment }}</h3>
         </ion-label>
       </ion-item>
+      <span> <strong>Válida hasta: </strong> {{ resp.expiration |date:'dd/MM/yyyy' }}</span>
     </ion-col>
     <ion-col size="4">
       <p>Oferta</p>
-      <h2>Q{{resp.price}}</h2>
+      <h2 class="price">Q{{ resp.price }}</h2>
     </ion-col>
   </ion-row>
 </ion-card>
