--- a/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
+++ b/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
@@ -56,8 +56,19 @@
     <ion-card-title *ngIf="responsesDetail.product===null" class="price-title"
       >{{responsesDetail.price | currency:'Q'}}</ion-card-title
     >
-    <p>Detalle Oferta:</p>
-    <ion-label> {{responsesDetail.comment}} </ion-label>
+    <ion-row>
+      <ion-col size="12">
+        <h2><strong>Detalle Oferta:</strong></h2>
+      </ion-col>
+      <ion-col size="12">
+        <ion-label> {{responsesDetail.comment}} </ion-label>
+      </ion-col>
+      <ion-col size="12">
+        <ion-label> <strong>Válida hasta: </strong> {{ responsesDetail.expiration |date:'dd/MM/yyyy' }}</ion-label>
+      </ion-col>
+    </ion-row>
+   
+   
     <ion-button expand="block">Aceptar Oferta</ion-button>
   </ion-card-content>
 </ion-content>
