--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -34,12 +34,13 @@
               <ng-container
                 *ngFor="let validation of validationUserMessage.email"
               >
-                <div
-                  class="error_message"
+                <ion-note
+                slot="error"
+                class="ion-invalid" 
                   *ngIf="validationFormUser.get('email').hasError(validation.type) && (validationFormUser.get('email').dirty || validationFormUser.get('email').touched)"
                 >
                   {{validation.message}}
-                </div>
+                </ion-note>
               </ng-container>
             </div>
             <ion-item>
@@ -55,12 +56,13 @@
               <ng-container
                 *ngFor="let validation of validationUserMessage.password"
               >
-                <div
-                  class="error_message"
+                <ion-note
+                slot="error"
+                class="ion-invalid"
                   *ngIf="validationFormUser.get('password').hasError(validation.type) && (validationFormUser.get('password').dirty || validationFormUser.get('password').touched)"
                 >
                   {{validation.message}}
-                </div>
+                </ion-note>
               </ng-container>
             </div>
           </div>
