--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -120,19 +120,6 @@
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <!-- <ion-item>
-            <ion-label position="stacked">Imagen </ion-label>
-            <ion-input type="file"></ion-input>
-          </ion-item> -->
-          <!-- <ion-item>
-            <ion-label position="floating">Imgen URL</ion-label>
-            <ion-input
-              name="imagen"
-              type="text"
-              [(ngModel)]="product.imagesUrl"
-              required
-            ></ion-input>
-          </ion-item> -->
           <ion-list>
             <ion-item *ngFor="let file of images">
               <ion-thumbnail slot="start">
@@ -145,7 +132,10 @@
           </ion-list>
         </ion-col>
       </ion-row>
-      <ion-button expand="full" type="submit" [disabled]="frm.invalid"
+     <!--  <ion-button expand="full" type="submit" [disabled]="frm.invalid"
+        >Guardar</ion-button
+      > -->
+      <ion-button expand="full" type="submit" 
         >Guardar</ion-button
       >
     </form>
