--- a/src/app/auth/register/register.page.scss
+++ b/src/app/auth/register/register.page.scss
@@ -3,3 +3,24 @@ form {
   display: flex;
   align-items: center;
 }
+
+.intro {
+  width: 100%;
+  height: 100%;
+  font-family: 'DM Sans', sans-serif;
+
+  &__content__image {
+    height: 25vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &--img {
+      width: 80%;
+      margin: auto;
+      padding: auto;
+    }
+  }
+
+}
