--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -3,12 +3,15 @@
     <ion-item>
       <ion-avatar slot="start">
         <img
-          src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"
+          src="{{user.profile.photo }}"
         />
       </ion-avatar>
       <ion-label>
-        <h3>Marco Linares</h3>
+        <h3>{{user.profile.name }}</h3>
       </ion-label>
+      <ion-button slot="end" fill="clear" color="danger" (click)="signOut()">
+        <ion-icon name="exit-outline"></ion-icon>
+      </ion-button>
     </ion-item>
   </ion-toolbar>
 </ion-header>
@@ -21,7 +24,7 @@
       <ion-icon name="pricetag" slot="start"></ion-icon>
       <ion-label>Compra</ion-label>
     </ion-item>
-    <ion-item (click)="viewRedirect('/app/tabs/sell')" >
+    <ion-item (click)="viewRedirect('/app/tabs/sell')">
       <ion-icon name="cash" slot="start"></ion-icon>
       <ion-label>Vende</ion-label>
     </ion-item>
@@ -52,7 +55,7 @@
       <ion-icon name="person" slot="start"></ion-icon>
       <ion-label>Mi Perfil</ion-label>
     </ion-item>
-    
+
     <ion-item (click)="viewRedirect('/chats')">
       <ion-icon name="chatbubbles" slot="start"></ion-icon>
       <ion-label>Chats</ion-label>
