--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -132,11 +132,11 @@
           </ion-list>
         </ion-col>
       </ion-row>
-     <!--  <ion-button expand="full" type="submit" [disabled]="frm.invalid"
-        >Guardar</ion-button
-      > -->
-      <ion-button expand="full" type="submit" 
-        >Guardar</ion-button
+      <ion-button expand="full" type="submit" [disabled]="frm.invalid"
+        >Registrar</ion-button
+      >
+      <!-- <ion-button expand="full" type="submit" 
+        >Guardar</ion-button -->
       >
     </form>
   </ion-grid>
